--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "fontawesome": "~4.0.3"
   }
 }
