--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.1.1",
-    "fontawesome": "~4.0.3"
+    "fontawesome": "~4.0.3",
+    "backbone": "~1.1.2"
   }
 }
