--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "express": "4.0.0",
     "neo4js": "0.0.3",
-    "jade": "1.3.1"
+    "jade": "1.3.1",
+    "less-middleware": "~0.2.1-beta",
+    "static-favicon": "~1.0.2"
   },
   "devDependencies": {
     "coffee-script": "1.2.0"
