--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "neo4js": "0.0.3",
     "jade": "1.3.1",
     "less-middleware": "~0.2.1-beta",
-    "static-favicon": "~1.0.2"
+    "static-favicon": "~1.0.2",
+    "debug": "~0.8.0"
   },
   "devDependencies": {
     "coffee-script": "1.2.0"
