--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bootstrap": "~3.1.1",
     "fontawesome": "~4.0.3",
-    "backbone": "~1.1.2"
+    "backbone": "~1.1.2",
+    "requirejs": "~2.1.11"
   }
 }
