--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "bootstrap": "~3.1.1",
     "fontawesome": "~4.0.3",
     "backbone": "~1.1.2",
-    "requirejs": "~2.1.11"
+    "requirejs": "~2.1.11",
+    "requirejs-text": "~2.0.12"
   }
 }
