--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "less-middleware": "~0.2.1-beta",
     "static-favicon": "~1.0.2",
     "debug": "~0.8.0",
-    "bower": "~1.3.2"
-    "coffee-script": "1.2.0",
+    "bower": "~1.3.2",
+    "coffee-script": "1.2.0"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
