added d3 and node_circle template

--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "backbone": "~1.1.2",
     "requirejs": "~2.1.11",
     "requirejs-text": "~2.0.12",
-    "require-cs": "~0.4.4"
+    "require-cs": "~0.4.4",
+    "d3": "~3.4.6"
   }
 }
