--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
-    "grunt": "~0.4.4"
+    "grunt": "~0.4.4",
+    "grunt-lesslint": "~1.1.2",
+    "grunt-coffeelint": "0.0.10"
   },
   "scripts": {
     "start": "node ./bin/www"
