add way to edit nodes from details pane

--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "requirejs": "~2.1.11",
     "requirejs-text": "~2.0.12",
     "require-cs": "~0.4.4",
-    "d3": "~3.4.6"
+    "d3": "~3.4.6",
+    "backbone-forms": "~0.14.0"
   }
 }
