--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "server/web.js",
   "dependencies": {
     "express": "4.0.0",
-    "neo4js": "0.0.3",
     "jade": "1.3.1",
     "less-middleware": "~0.2.1-beta",
     "static-favicon": "~1.0.2",
     "debug": "~0.8.0",
     "bower": "~1.3.2",
-    "coffee-script": "1.2.0"
+    "coffee-script": "1.2.0",
+    "neo4j": "~1.1.0"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
