--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "description": "Rhizi",
   "main": "server/web.js",
   "dependencies": {
-    "express": "4.0.0",
-    "neo4js": "0.0.3",
+    "express": "4.3.0",
+    "neo4js": "0.0.4",
     "jade": "1.3.1",
-    "less-middleware": "~0.2.1-beta",
-    "static-favicon": "~1.0.2",
-    "debug": "~0.8.0",
-    "bower": "~1.3.2",
-    "coffee-script": "1.2.0"
+    "less-middleware": "~1.0.3",
+    "static-favicon": "~2.0.0-alpha",
+    "debug": "~0.8.1",
+    "bower": "~1.3.3",
+    "coffee-script": "1.7.1",
+    "jsdom":  "0.2.x"
   },
   "devDependencies": {
-    "coffeelint": "~1.3.0",
-    "grunt": "~0.4.4",
-    "grunt-lesslint": "~1.1.2",
+    "coffeelint": "~1.4.1",
+    "grunt": "~0.4.5",
+    "grunt-lesslint": "~1.1.3",
     "grunt-coffeelint": "0.0.10"
   },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "node ./spec_runner.js"
   },
   "repository": {
     "type": "git",
