--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "debug": "~0.8.0",
     "bower": "~1.3.2",
     "coffee-script": "1.2.0",
-    "neo4j": "~1.1.0"
+    "neo4j": "~1.1.0",
+    "body-parser": "~1.2.0"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
