--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "require-cs": "~0.4.4",
     "d3": "~3.4.6",
     "backbone-forms": "~0.14.0",
-    "typeahead.js": "~0.10.2"
+    "typeahead.js": "~0.10.2",
+    "jasmine": "~2.0.0"
   }
 }
