--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,9 @@
     "require-cs": "~0.4.4",
     "d3": "~3.4.6",
     "backbone-forms": "~0.14.0",
-    "typeahead.js": "~0.10.2",
+    "typeahead.js": "~0.10.2"
+  },
+  "devDependencies": {
     "jasmine": "~2.0.0"
   }
 }
