--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "body-parser": "~1.2.0"
   },
   "devDependencies": {
-    "coffeelint": "~1.4.1",
-    "grunt": "~0.4.5",
-    "grunt-lesslint": "~1.1.3",
+    "coffeelint": "~1.3.0",
+    "grunt": "~0.4.4",
+    "grunt-lesslint": "~1.1.2",
     "grunt-coffeelint": "0.0.10"
   },
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "node ./spec_runner.js"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
