--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bower": "~1.3.2",
     "coffee-script": "1.2.0",
     "neo4j": "~1.1.0",
-    "body-parser": "~1.2.0"
+    "body-parser": "~1.2.0",
+    "async": "~0.9.0"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
