--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "coffee-script": "1.2.0",
     "neo4j": "~1.1.0",
     "body-parser": "~1.2.0",
-    "underscore": "~1.6.0",
-    "backbone": "~1.1.2"
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
