--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "d3": "~3.4.6",
     "backbone-forms": "~0.14.0",
     "typeahead.js": "~0.10.2",
-    "backbone.bootstrap-modal": "git@github.com:vpontis/backbone.bootstrap-modal.git#~0.9.1"
+    "backbone.bootstrap-modal": "git@github.com:vpontis/backbone.bootstrap-modal.git#~0.9.1",
+    "bootstrap-colorpalette": "git@github.com:willzeng/bootstrap-colorpalette.git"
   },
   "devDependencies": {
     "jasmine": "~2.0.0"
