--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "coffee-script": "1.2.0",
     "neo4j": "~1.1.0",
     "body-parser": "~1.2.0",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "express.io": "~1.1.13"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
