--- a/bower.json
+++ b/bower.json
@@ -35,13 +35,10 @@
     "bootstrap-colorpalette": "~0.0.1",
     "share-button": "~0.4.1",
     "backbone.iobind": "~0.4.7",
-    "jquery.atwho": "~0.5.0",
-    "caret.js": "~0.1.0"
+    "caret.js": "~0.1.0",
+    "targeted-atwho": "~0.5.1"
   },
   "devDependencies": {
     "jasmine": "~2.0.0"
-  },
-  "resolutions": {
-    "jquery": ">= 1.9.0"
   }
 }
