--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "Graphdocs",
   "main": "server/web.js",
   "dependencies": {
-    "express": "4.0.0",
-    "jade": "1.3.1",
-    "less-middleware": "~0.2.1-beta",
-    "static-favicon": "~1.0.2",
-    "debug": "~0.8.0",
+    "body-parser": "~1.2.0",
     "bower": "~1.3.2",
     "coffee-script": "1.2.0",
+    "debug": "~0.8.0",
+    "express": "4.0.0",
+    "express.io": "~1.1.13",
+    "jade": "1.3.1",
+    "less-middleware": "~0.2.1-beta",
     "neo4j": "~1.1.0",
-    "body-parser": "~1.2.0",
-    "underscore": "~1.6.0",
-    "express.io": "~1.1.13"
+    "static-favicon": "~1.0.2",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
