--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "share-button": "~0.4.1",
     "backbone.iobind": "~0.4.7",
     "caret.js": "~0.1.0",
-    "targeted-atwho": "~0.5.1"
+    "targeted-atwho": "~0.5.1",
+    "twitter-text": "~1.9.4"
   },
   "devDependencies": {
     "jasmine": "~2.0.0"
