--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,8 @@
     "caret.js": "~0.1.0",
     "targeted-atwho": "~0.5.2",
     "twitter-text": "~1.9.4",
-    "jQuery-linkify": "~1.1.7"
+    "jQuery-linkify": "~1.1.7",
+    "underscore": "1.6.0"
   },
   "devDependencies": {
     "jasmine": "~2.0.0"
