--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "description": "Graphdocs",
   "main": "server/web.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.2.0",
     "bower": "~1.3.2",
     "coffee-script": "1.2.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.3",
     "debug": "~0.8.0",
     "express": "4.0.0",
+    "express-session": "^1.8.1",
     "express.io": "~1.1.13",
     "jade": "1.3.1",
     "less-middleware": "~0.2.1-beta",
+    "method-override": "^2.2.0",
+    "mongoose": "^3.8.16",
+    "morgan": "^1.3.0",
     "neo4j": "~1.1.0",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "static-favicon": "~1.0.2",
     "underscore": "~1.6.0"
   },
