--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "morgan": "^1.3.0",
     "neo4j": "~1.1.0",
     "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.2",
     "static-favicon": "~1.0.2",
     "underscore": "~1.6.0"
   },
