--- a/bower.json
+++ b/bower.json
@@ -42,7 +42,8 @@
     "jQuery-linkify": "~1.1.7",
     "underscore": "1.6.0",
     "feedback-bot": "0.3.1",
-    "iconset": "https://github.com/davidfurlong/iconset.git"
+    "iconset": "https://github.com/davidfurlong/iconset.git",
+    "jquery-autosize": "~1.18.13"
   },
   "devDependencies": {
     "jasmine": "~2.0.0"
