--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.2",
     "static-favicon": "~1.0.2",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "nodemailer": "0.7.1"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
