--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.2",
     "static-favicon": "~1.0.2",
-    "underscore": "~1.6.0",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
@@ -39,8 +39,7 @@
     "requirejs": "~2.1.15"
   },
   "scripts": {
-    "start": "node ./bin/www",
-    "produce": "node_modules/requirejs/bin/r.js -o app/build.js; node_modules/requirejs/bin/r.js -o app/build-css.js; node ./bin/www"
+    "start": "node_modules/requirejs/bin/r.js -o app/build.js; node_modules/requirejs/bin/r.js -o app/build-css.js; node ./bin/www"
   },
   "repository": {
     "type": "git",
