--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bower": "~1.3.2",
     "coffee-script": "1.2.0",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^2.1.0",
     "cookie-parser": "^1.3.3",
     "crypto": "0.0.3",
     "debug": "~0.8.0",
