--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.2",
     "static-favicon": "~1.0.2",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "twitter": "~0.2.13"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
