--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.2.0",
     "bower": "~1.3.2",
     "coffee-script": "1.2.0",
+    "compression": "^1.3.0",
     "connect-flash": "^0.1.1",
     "connect-redis": "^2.1.0",
     "cookie-parser": "^1.3.3",
