fix session store

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-facebook": "^1.0.3",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.2",
+    "redis": "^0.12.1",
     "static-favicon": "~1.0.2",
     "underscore": "~1.6.0"
   },
