--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "passport-twitter": "^1.0.2",
     "redis": "^0.12.1",
     "static-favicon": "~1.0.2",
-    "underscore": "~1.6.0",
-    "twitter": "~0.2.13"
+    "twitter": "^1.2.1",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "coffeelint": "~1.3.0",
