--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.3.0",
     "neo4j": "~1.1.0",
     "nodemailer": "0.7.1",
+    "oauth": "^0.9.12",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-local": "^1.0.0",
