--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jade": "1.3.1",
     "less-middleware": "~0.2.1-beta",
     "method-override": "^2.2.0",
-    "mongoose": "^3.8.16",
+    "mongoose": "~3.8.16",
     "morgan": "^1.3.0",
     "neo4j": "~1.1.0",
     "nodemailer": "0.7.1",
