--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.8.1",
     "express.io": "~1.1.13",
     "jade": "1.3.1",
+    "less": "^2.5.0",
     "less-middleware": "~0.2.1-beta",
     "method-override": "^2.2.0",
     "mongoose": "~3.8.16",
