--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.3.3",
     "crypto": "0.0.3",
     "debug": "~0.8.0",
+    "dotenv": "^1.1.0",
     "express": "4.0.0",
     "express-flash": "0.0.2",
     "express-session": "^1.8.1",
